fix: text align left

--- a/src/components/ui/PetProjectCard/PetProjectCard.module.css
+++ b/src/components/ui/PetProjectCard/PetProjectCard.module.css
@@ -88,7 +88,7 @@
   margin: 0 0 0 0;
   padding: 24px 0;
   line-height: 1.4;
-  text-align: center;
+  text-align: left;
   max-width: 27%;
   max-width: 333px;
   @media screen and (max-width: 950px) {
